--- a/web/index.html
+++ b/web/index.html
@@ -1,16 +1,25 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE HTML>
 <html>
 <head>
     <title>Neeto</title>
     <script type="text/javascript" src="scripts/jquery.js"></script>
     <script type="text/javascript" src="scripts/neeto.js"></script>
+    <meta charset="utf-8">
 </head>
 <body>
-    <h1>Neeto</h1>
-    <h2>Tweets for YOU?</h2>
-    <div id="feed">
-        <ul id="feed_items"></ul>
-    </div>
+    <header>
+        <h1>Neeto</h1>
+        <h2>Tweets for YOU?</h2>
+    </header>
+    
+    <section>
+        <ul id="feed_items">
+            <li>Retrieveing your tweets</li>
+        </ul>
+    </section>
+
+    <footer>
+        (c) 2010 Sincerial AS
+    </footer>
 </body>
 </html>
