--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
     
     <section>
         <ul id="feed_items">
-            <li>Retrieveing your tweets</li>
+            <li>Retrieving your tweets</li>
         </ul>
     </section>
 
