--- a/web/index.html
+++ b/web/index.html
@@ -7,11 +7,15 @@
     <meta charset="utf-8">
 </head>
 <body>
+    <ul class="menu">
+        <li><a href="#" id="sign_in">Sign in</a></li>
+    </ul>
+
     <header>
         <h1>Neeto</h1>
         <h2>Tweets for YOU?</h2>
     </header>
-    
+
     <section>
         <ul id="feed_items">
             <li>Retrieving your tweets</li>
